--- a/01-beginner/02-연산자/연산자.md
+++ b/01-beginner/02-연산자/연산자.md
@@ -2,7 +2,8 @@
 
 ## 몰랐던 String 타입 비교 포인트
 
--   비교 대상 중 하나가 (Number로 변환할 수 없는) String 타입이면 `false`를 반환한다.
+-   비교 대상 중 하나가 (Number로 변환했을 때
+-   NaN이 아닌) String 타입이면 `false`를 반환한다.
     -   `100 > 'hello'`: 부등호 방향에 관계없이 false
     -   `100 > '2'`: '2'를 Number로 변환할 수 있으므로 변환하여 비교하면 true
 
@@ -16,3 +17,8 @@
 2. `2.9.`까지는 문자가 똑같으므로 계속 비교할 것이다.
 3. `2.9.` 다음 문자인 각각 `1`과 `9`를 비교할 것인데, `1`이 `9`보다 유니코드 값으로는 작으므로(유니코드에서 순서가 앞서므로) 큰 것이 아니다(false)
 4. 결정이 된다면 다음 값을 비교하지 않는다.
+
+# 연산자 명칭
+
+-   `==`: `동등` 연산자 ↔ `!=`: `부등` 연산자
+-   `===`: `일치` 연산자 ↔ `!==`: `불일치` 연산자
