--- a/01-beginner/15-자바스크립트특징.md
+++ b/01-beginner/15-자바스크립트특징.md
@@ -2,20 +2,18 @@
 
 -   스크립팅 언어
     -   소스파일의 코드를 사전에 컴파일하여 실행파일을 만드는 것이 아니라 사용하는 시점에 컴파일한다.
-
-```js
-var value = 222;
-var book = function () {
-    var point = 333;
-    var getPoint = function () {
-        return point;
-    };
-    // ✋ 아래의 구문을 만날 떄까지 getPoint가 가리키는 함수는 컴파일하지 않는다.
-    getPoint();
-};
-book();
-```
-
+        ```js
+        var value = 222;
+        var book = function () {
+            var point = 333;
+            var getPoint = function () {
+                return point;
+            };
+            // ✋ 아래의 구문을 만날 떄까지 getPoint가 가리키는 함수는 컴파일하지 않는다.
+            getPoint();
+        };
+        book();
+        ```
 -   자바스크립트 언어도 객체지향이다. (ECMAScript is an object-oriented programming language...)
 
 ## OOP 객체
@@ -25,3 +23,55 @@ book();
     -   행위, 속성이 있다.
     -   행위(메서드): 공부하다, 먹다
     -   속성(프로퍼티): 자바스크립트, 다이제 민트초코
+
+## 자바스크립트의 객체 형태
+
+-   Object
+    ```js
+    var book = {
+        read: function(param){💬}
+    }
+    ```
+-   Function 오브젝트
+    ```js
+    function readBook(param){💬}
+    ```
+    -   그런데 객체라고 할 수 있으나 OOP의 객체라고 보기에는 어려울 수 있음.
+
+## Prototype
+
+-   JS의 OOP는 prototype에 메서드를 연결하는 형태이다.
+-   다른언어는 class 안에 메서드와 프로퍼티를 작성하지만 자바스크립트에서는 prototype에 메서드를 작성한다는 것이 차이점이다.
+-   그러나 ES6에서는 class 문법을 사용할 수 있음
+
+## Instance
+
+-   Class를 new 연산자로 생성한 것
+
+-   인스턴스 목적
+
+    -   class에 작성된 메서드 사용
+    -   인스턴스마다 속성 값을 독립적으로 유지하기 위함
+    -   책마다 속성값인 가격이 다를 수 있다.
+
+### new 연산자
+
+```js
+var Book = function (price) {
+    this.price = price;
+};
+
+Book.prototype.getPrice = function () {
+    return this.price + 100;
+};
+
+var theMath = new Book(200);
+
+console.log(theMath.getPrice());
+```
+
+### instanceof
+
+```js
+console.log(theMath instanceof Book);
+```
